fixed bet board spacing

--- a/client/style.css
+++ b/client/style.css
@@ -8,25 +8,33 @@
 }
 
 #bet-board-lower {
-  height: 131px;
+  height: 138px;
   margin: 0px 35px 0px 46px;
   width: 528px;
 }
 
 #bet-board-upper {
-  height: 219px;
+  height: 212px;
   width: 620px;
+}
+
+#bet-column-1st {
+  height: 68px;
+}
+
+#bet-column-3rd {
+  height: 72px;
 }
 
 #bet-spacer-column {
   float: right;
   height: 211px;
-  width: 44px;
+  width: 46px;
 }
 
 .bet-spacer-column {
   height: 70px;
-  width: 44px;
+  width: 46px;
 }
 
 .bet-spacer-column:hover {
@@ -55,7 +63,7 @@
 
 .bet-spacer-other {
   float: left;
-  height: 70px;
+  height: 72px;
   width: 88px;
 }
 
@@ -75,7 +83,7 @@
 
 .bet-spacer-thin-bottom {
   float: left;
-  height: 64px;
+  height: 58px;
   width: 8px;
 }
 
@@ -83,9 +91,19 @@
   background: #00c400;
 }
 
+.bet-spacer-thin-middle {
+  float: left;
+  height: 62px;
+  width: 8px;
+}
+
+.bet-spacer-thin-middle:hover {
+  background: #00c400;
+}
+
 .bet-spacer-thin-top {
   float: left;
-  height: 67px;
+  height: 68px;
   width: 8px;
 }
 
@@ -95,7 +113,7 @@
 
 .bet-spacer-thirds {
   float: left;
-  height: 61px;
+  height: 66px;
   width: 176px;
 }
 
@@ -105,7 +123,7 @@
 
 .bet-spacer-wide-bottom {
   float: left;
-  height: 64px;
+  height: 58px;
   width: 36px;
 }
 
@@ -115,7 +133,7 @@
 
 .bet-spacer-wide-end {
   float: left;
-  height: 67px;
+  height: 68px;
   width: 40px;
 }
 
@@ -125,7 +143,7 @@
 
 .bet-spacer-wide-end-bottom {
   float: left;
-  height: 64px;
+  height: 62px;
   width: 40px;
 }
 
@@ -133,9 +151,19 @@
   background: #00c400;
 }
 
+.bet-spacer-wide-middle {
+  float: left;
+  height: 62px;
+  width: 36px;
+}
+
+.bet-spacer-wide-middle:hover {
+  background: #00c400;
+}
+
 .bet-spacer-wide-top {
   float: left;
-  height: 67px;
+  height: 68px;
   width: 36px;
 }
 
@@ -147,11 +175,15 @@
   float: left;
   height: 210px;
   margin-bottom: 9px;
-  width: 44px;
+  width: 42px;
 }
 
 #bet-straightup-0:hover {
   background: #00c400;
+}
+
+#bet-straightup-34 {
+  height: 58px;
 }
 
 body {
